Simplified the play button icon in the recorder now that the play test suite button is no longer visible

--- a/testbench-recorder/main/src/skin/vaadin/selenium-ide.css
+++ b/testbench-recorder/main/src/skin/vaadin/selenium-ide.css
@@ -275,7 +275,7 @@ toolbarbutton.icon label {
 }
 #play-button {
 	-moz-image-region: auto;
-    list-style-image: url("play-testcase.png");
+    list-style-image: url("play.png");
 }
 .pause#pause-button,
 .resume#pause-button { 
